--- a/DanceCalc/m4d/Views/Song/Details.cshtml
+++ b/DanceCalc/m4d/Views/Song/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model m4dModels.SongDetails
+﻿@using System.Runtime.Serialization.Json
+@using m4dModels
+@model SongDetails
 
 @{
     ViewBag.Title = Model.Title;
@@ -50,12 +52,39 @@
     </div>
 }
 
-@section Scripts
-{
+@section Scripts {
+    @{
+        string pageScript = "~/Scripts/edit.js" + Page.ScriptQualifier;
+        string counterScript = "~/Scripts/counter.js" + Page.ScriptQualifier;
+        if (ViewData.ContainsKey("paramNumerator"))
+        {
+            <script> var paramNumerator = @ViewBag.paramNumerator; </script>
+        }
+        var stream = new MemoryStream();
+        var serializer = new DataContractJsonSerializer(typeof(SongDetails));
+        serializer.WriteObject(stream, Model);
+        var songString = System.Text.Encoding.UTF8.GetString(stream.ToArray());
+        var canEdit = User.IsInRole("canEdit") ? "true" : "false";
+    }
     <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
+        var paramShowMPM = true;
+        var paramShowBPM = true;
+        var paramEpsVisible = 0.1;
+        var song = @Html.Raw(songString);
+        var canEdit = @canEdit;
     </script>
+
+    @Scripts.Render("~/bundles/jqueryval")
+    <script src="@Url.Content("~/Scripts/jquery.livequery.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/knockout-3.2.0.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
+    <script src="~/Scripts/jquery.nouislider.full.min.js" type="text/javascript"></script>
+    <script src="@Url.Content(counterScript)" type="text/javascript"></script>
+    <script src="@Url.Content(pageScript)" type="text/javascript"></script>
+
+    <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
+    <link href="~/Content/jquery.nouislider.css" rel="stylesheet" />
+    <link href="~/Content/jquery.nouislider.pips.css" rel="stylesheet" />
 }
 
