--- a/DanceCalc/m4d/Views/Song/Edit.cshtml
+++ b/DanceCalc/m4d/Views/Song/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model m4dModels.SongDetails
 @using System.Runtime.Serialization.Json
+@using m4dModels
 
 @{
     ViewBag.Title = "Edit";
@@ -30,33 +31,32 @@
         string counterScript = "~/Scripts/counter.js" + Page.ScriptQualifier;
         if (ViewData.ContainsKey("paramNumerator"))
         {
-            <script>var paramNumerator = @ViewBag.paramNumerator;</script>
+            <script> var paramNumerator = @ViewBag.paramNumerator; </script>
         }
         var stream = new MemoryStream();
-        var serializer = new DataContractJsonSerializer(typeof(IEnumerable<m4dModels.AlbumDetails>));
-        serializer.WriteObject(stream, Model.Albums);
-        var albumsString = System.Text.Encoding.UTF8.GetString(stream.ToArray());
+        var serializer = new DataContractJsonSerializer(typeof(SongDetails));
+        serializer.WriteObject(stream, Model);
+        var songString = System.Text.Encoding.UTF8.GetString(stream.ToArray());
+        var canEdit = User.IsInRole("canEdit") ? "true" : "false";
     }
     <script>
         var paramShowMPM = true;
         var paramShowBPM = true;
         var paramEpsVisible = 0.1;
-        var songId = "@Model.SongId.ToString()";
-        var albums = @Html.Raw(albumsString);
+        var canEdit = @canEdit;
+        var song = @Html.Raw(songString);
     </script>
 
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="@Url.Content("~/Scripts/jquery.livequery.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout-3.2.0.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
     <script src="~/Scripts/jquery.nouislider.full.min.js" type="text/javascript"></script>
-    <script>
-        $(".chzn-select").chosen({ width: "500px" });
-    </script>
     <script src="@Url.Content(counterScript)" type="text/javascript"></script>
     <script src="@Url.Content(pageScript)" type="text/javascript"></script>
 
-    <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
-    <link href="~/Content/jquery.nouislider.css" rel="stylesheet" />
-    <link href="~/Content/jquery.nouislider.pips.css" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css"/>
+    <link href="~/Content/jquery.nouislider.css" rel="stylesheet"/>
+    <link href="~/Content/jquery.nouislider.pips.css" rel="stylesheet"/>
 }
