--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -54,7 +54,7 @@
     </fieldset>
 </div>
 
-@if (Model.TagSummary.Tags.Count != 0)
+@if (Model.TagSummary.Tags.Count != 0 || User.IsInRole("canEdit"))
 {
     <div class="row">
         <div class="col-md-12">
