--- a/DanceCalc/m4d/Views/Song/ItemTags.cshtml
+++ b/DanceCalc/m4d/Views/Song/ItemTags.cshtml
@@ -2,10 +2,10 @@
     <span data-bind="foreach: list">
         <span class="label label-music" data-bind="css:'label-' + $parent.nameLower()" style="margin-right: 5px">
             <a role="button" class="tag-text" data-bind="text: tag, attr: {href: url}"></a>
-            <a role="button" href="#" class="glyphicon tag-text" data-bind="css:tagClass, click:toggleUser, visible:$root.canEdit"></a>
+            <a role="button" href="#" class="glyphicon tag-text" data-bind="css:tagClass, click:toggleUser, visible:$root.canEdit" data-show="tooltip" data-original-title="Click to add or remove from your tags"></a>
         </span>
     </span>
-    <a role="button" class="label" data-bind="visible:$root.canEdit, css:'label-' + nameLower(), attr:{'data-category':name,'data-danceid':summary.danceId, title:tooltip}" data-toggle="modal" data-show="tooltip" data-placement="top" data-target="#addTags"><span class="glyphicon glyphicon-plus-sign"></span></a>
+    <a role="button" class="label" data-bind="visible:$root.canEdit, css:'label-' + nameLower(), attr:{'data-category':name,'data-danceid':summary.danceId, 'data-original-title':tooltip}" data-toggle="modal" data-show="tooltip" data-placement="top" data-target="#addTags"><span class="glyphicon glyphicon-plus-sign"></span></a>
 </script>
 
 <div class="modal fade" id="addTags" tabindex="-1" role="dialog" data-backdrop="static" aria-hidden="true">
