Fix user listing page

--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model ApplicationUserManager
+﻿@using Microsoft.AspNet.Identity
+@model ApplicationUserManager
 
 @{
     ViewBag.Title = "Index";
