Fix the account management bug introduced by the SEO stuff.  Parameters to controllers aren't forced to lower case - this is probably the right thing to do for other reasons.

--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -97,7 +97,7 @@
             @string.Join(",",Model.GetRoles(item.Id))
         </td>
         <td>
-            @string.Join(",",Model.GetLogins(item.Id))
+            @string.Join(",",Model.GetLogins(item.Id).Select(l => l.LoginProvider))
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.EmailConfirmed)
