--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -52,6 +52,7 @@
 <ul>
     <li>@Html.ActionLink("Backup the Database", "BackupDatabase")</li>
     <li>@Html.ActionLink("Backup the Database (with lookup history)", "BackupDatabase", new {useLookupHistory = "true" })</li>
+    <li>@Html.ActionLink("Backup users", "BackupDatabase", new {  tags = false, dances = false, songs = false })</li>
     <li>@Html.ActionLink("Backup tail", "BackupTail", new { count = 150 })</li>
     <li>@Html.ActionLink("Update Purchase Info", "UpdatePurchase")</li>
     <li>@Html.ActionLink("Update Title Hashes", "UpdateTitleHash")</li>
@@ -117,8 +118,9 @@
         <input type="checkbox" name="batch" id="batch" value="true" /> <text>Batch Upload</text>
         <input type="submit" name="reloadDatabase" id="Reload" value="Reload" />
         @*<input type="submit" name="reloadDatabase" id="Add" value="Add" />*@
-        <input type="submit" name="reloadDatabase" id="UpdateSongs" value="Update Songs" />
-        <input type="submit" name="reloadDatabase" id="UpdateDances" value="Update Dances" />
+        <input type="submit" name="reloadDatabase" id="UpdateSongs" value="Songs" />
+        <input type="submit" name="reloadDatabase" id="UpdateDances" value="Dances" />
+        <input type="submit" name="reloadDatabase" id="UpdateSongs" value="Users" />
     }
 }
 
