--- a/DanceCalc/m4d/Content/Site.css
+++ b/DanceCalc/m4d/Content/Site.css
@@ -254,3 +254,7 @@ h1, h2, h3, h4, h5, h6 { font-family: "Merienda";font-weight: 700 }
 .rating-voted {
     font-weight: bold;
 }
+
+.list-clean {
+    list-style-type: none;
+}
