--- a/DanceCalc/m4d/Views/Manage/EditProfile.cshtml
+++ b/DanceCalc/m4d/Views/Manage/EditProfile.cshtml
@@ -8,7 +8,7 @@
 <h2>EditProfile</h2>
 <hr />
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
 {
     @Html.AntiForgeryToken()
     
