Add stub music services for user profile

--- a/DanceCalc/m4d/Views/Manage/Index.cshtml
+++ b/DanceCalc/m4d/Views/Manage/Index.cshtml
@@ -91,6 +91,6 @@
     <hr/>
     <div>
         <h4>View your music4dance</h4>
-        <p>@Html.ActionLink("Show songs that you have modified", "FilterUser", "Song", new {user = @User.Identity.GetUserName()}, null)</p>
+        <p>@Html.ActionLink("Show songs that you have tagged", "FilterUser", "Song", new {user = @User.Identity.GetUserName()}, null)</p>
     </div>
 </div>
