--- a/DanceCalc/m4d/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/DanceCalc/m4d/Views/Account/ExternalLoginConfirmation.cshtml
@@ -8,7 +8,8 @@
 @* ReSharper disable once RedundantAnonymousTypePropertyName *@
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
-    bool showEmail = string.IsNullOrWhiteSpace(@Model.Email) || !string.IsNullOrWhiteSpace(@Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" }).ToString());
+    var showEmail = string.IsNullOrWhiteSpace(@Model.Email);
+    
     @Html.AntiForgeryToken()
 
     <h4>Association Form</h4>
