Spotify region fix

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -35,6 +35,7 @@
     <li>@Html.ActionLink("Clean Tags", "CleanTags")</li>*@
     <li>@Html.ActionLink("Infer Dance Types", "InferDanceTypes")</li>
     <li>@Html.ActionLink("Clear Song Cache", "ClearSongCache")</li>
+    <li>@Html.ActionLink("Update Spotify Regions", "SpotifyRegions", "Admin", new { count = 100 }, null)</li>
 </ul>
 
 <h3>Tracing (Current Level = @ViewBag.TraceLevel)</h3>
