--- a/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_ListSongs.cshtml
@@ -1,5 +1,4 @@
-﻿Da@using Microsoft.AspNet.Identity
-@model IEnumerable<m4dModels.SongBase>
+﻿@model IEnumerable<m4dModels.SongBase>
 
 @{
     var isAdmin = User.IsInRole("dbAdmin");        
